--- a/login_form.html
+++ b/login_form.html
@@ -8,6 +8,7 @@
         body{
             font-family: cursive;
             background-image:url("image_ccs.jpeg") ;
+            align-items: center;
         }
         div{
             text-align: center;
