--- a/w3c.html
+++ b/w3c.html
@@ -100,7 +100,7 @@ table, th,td
         Note from this era too, <a
             href="https://www.w3.org/History/19921103-hypertext/hypertext/WWW/TheProject.html">the least recently
             modified web page</a> we know of, last changed Tue, 13 Nov 1990 15:17:00 GMT (though the URI changed.)</dd>
-    <table>
+    <!-- <table>
         <tr>
             <th>S.no</th>
             <th>name</th>
@@ -116,7 +116,7 @@ table, th,td
             <td>2</td>
             <td>saif</td>
             <td>24</td>
-        </tr>
+        </tr> -->
     </table>
 
 
