--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         flex-direction: column;
         align-items: center;
         background-color:rgba(39, 117, 145, 0.2);
-        width: 250px;
+        width: 280px;
        
         box-shadow: 2px aqua;
         margin: 120px;
@@ -49,7 +49,7 @@
        .lasta{
         margin-bottom: 10px;
         margin-right: 5px;
-        margin-left: 5pxg;
+        margin-left: 5px;
        }
     
     </style>
