--- a/mini_proj.html
+++ b/mini_proj.html
@@ -44,7 +44,7 @@
             nostrum unde expedita odit architecto aliquid doloribus dolore sapiente quam quaerat impedit. Necessitatibus
             aut earum tempora!</p>
         <img src="https://tse4.mm.bing.net/th?id=OIP.2A0rcBfwW_fDIuv9YM9JmQHaE8&pid=Api&P=0&h=180" width="600"
-            height="300" alt="">
+            height="300" alt="">git
 
         <img src="https://www.worldatlas.com/r/w1200/upload/ce/81/b5/artboard-1.png" width="600" height="300"
             align=right>
